--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "main": "index.js",
   "scripts": {
     "watch:sass": "node-sass src/sass/style.scss dist/css/style.css -w",
-    "devserver": "live-server",
-    "start": "npm-run-all --parallel devserver watch:sass",
+    "devserver": "live-server ./dist",
+    "start:css": "npm-run-all --parallel devserver watch:sass",
     "compile:sass": "node-sass src/sass/style.scss dist/css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" dist/css/style.comp.css -o dist/css/style.prefix.css",
     "compress:css": "node-sass dist/css/style.prefix.css dist/css/style.css --output-style compressed",
     "build:css": "npm-run-all compile:sass prefix:css compress:css",
     "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "startjs": "webpack-dev-server --mode development --open"
+    "build:js": "webpack --mode production",
+    "start:js": "webpack-dev-server --mode development --open"
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,8 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.5.1",
+    "jquery": "^3.5.1"
   }
 }
