--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@splidejs/splide": "^2.4.11",
     "babel-polyfill": "^6.26.0",
     "jquery": "^3.5.1"
   }
